[project]
name = "planner"
version = "0.1.0"
description = "Application to plan events"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn==0.44.0",
    "pydantic[email]==2.13.1",
    "pydantic-extra-types==2.11.1",
    "phonenumbers==9.0.29",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "click==8.3.2",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "h11==0.16.0",
    "idna==3.11",
    "pip==25.3",
    "pydantic-core==2.46.1",
    "starlette==1.0.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uv==0.11.6",
    "iniconfig==2.3.0",
    "librt==0.9.0",
    "mypy==1.20.2",
    "mypy-extensions==1.1.0",
    "packaging==26.2",
    "pathspec==1.1.1",
    "pluggy==1.6.0",
    "pygments==2.20.0",
    "pytest==9.0.3",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

# Configuración base (como el límite de caracteres)
[tool.ruff]
line-length = 88

# Todo lo que tenga que ver con "linting" (análisis) va aquí ahora
[tool.ruff.lint]
select = [
    "E",   # Errores de estilo (pycodestyle)
    "F",   # Errores de lógica (pyflakes)
    "I",   # Ordenar imports (isort)
    "UP",  # Modernizar sintaxis (pyupgrade)
    "B",   # Detectar bugs potenciales (flake8-bugbear)
]